--- a/sample/src/charts/funnel-charts/binding-to-remote-data.html
+++ b/sample/src/charts/funnel-charts/binding-to-remote-data.html
@@ -1,9 +1,11 @@
 <template>
-  <au-kendo-chart title.bind="{text: 'Spain windpower electricity production (GWh)'}"
-                  legend.bind="legend"
-                  data-source.bind="datasource"
-                  series-defaults.bind="seriesDefaults"
-                  series.bind="series"
-                  tooltip.bind="tooltip">
-  </au-kendo-chart>
+    <div class="demo-section k-content wide">
+        <au-kendo-chart title.bind="{text: 'Spain windpower electricity production (GWh)'}"
+                      legend.bind="legend"
+                      data-source.bind="datasource"
+                      series-defaults.bind="seriesDefaults"
+                      series.bind="series"
+                      tooltip.bind="tooltip">
+        </au-kendo-chart>
+    </div>
 </template>
