--- a/sample/src/charts/funnel-charts/funnel-labels.html
+++ b/sample/src/charts/funnel-charts/funnel-labels.html
@@ -1,12 +1,14 @@
 <template>
-  <au-kendo-chart title.bind="{text: 'The AIDA model'}"
-                  legend.bind="legend"
-                  series-defaults.bind="seriesDefaults"
-                  series.bind="series"
-                  value-axis.bind="valueAxis"
-                  category-axis.bind="categoryAxis"
-                  tooltip.bind="tooltip">
-  </au-kendo-chart>
+    <div class="demo-section k-content">
+      <au-kendo-chart title.bind="{text: 'The AIDA model'}"
+                      legend.bind="legend"
+                      series-defaults.bind="seriesDefaults"
+                      series.bind="series"
+                      value-axis.bind="valueAxis"
+                      category-axis.bind="categoryAxis"
+                      tooltip.bind="tooltip">
+      </au-kendo-chart>
+    </div>
 
 
    <div class="row">
