fix slider initialization
fix(wraper):fix slider initialization

instead of using bind callback, we use attached

--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -66,7 +66,7 @@
                   <a href="#">MultiSelect</a>                       <br>
                   <a href="#">Numeric TextBox</a>                   <br>
                   <img src="images/orange.png">
-                  <a href="#">Slider</a>                            <br>
+                  <a href="#/slider">Slider</a>                            <br>
                   <a href="#">TimePicker</a>                        <br>
                   <a href="#">Upload</a>                            <br>
                   <a href="#">Switch</a>                            <br>
