add skeleton help page
feat(sample): add skeleton help page

also - all routes in app.js are finally sorted

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <h3>About Aurelia-KendoUI Plugin (bridge)</h3>
+        <h2>About Aurelia-KendoUI Bridge</h2>
 
         <br>
 
