--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -76,6 +76,10 @@
         <li route-highlight="routes: grid">
           <a route-href="route: grid">Grid</a>
         </li>
+
+       <li route-highlight="routes: help">
+          <a route-href="route: help">Help</a>
+        </li>
       </ul>
 
 
