--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -59,7 +59,7 @@
                   <a href="#/combobox">Combobox</a>                  <br>
                   <a href="#">DatePicker</a>                        <br>
                   <a href="#">DateTimePicker</a>                    <br>
-                  <img src="images/green.png">
+                  <img src="images/orange.png">
                   <a href="#/dropdownlist">DropDownList</a>         <br>
                   <a href="#">Editor</a>                            <br>
                   <a href="#">MaskedTextBox</a>                     <br>
@@ -144,6 +144,7 @@
                  <a href="#">ButtonGroup</a>                        <br>
                  <a href="#">Menu</a>                               <br>
                  <a href="#">PanelBar</a>                           <br>
+                 <img src="images/orange.png">
                  <a href="#/tabstrip">TabStrip</a>                  <br>
                  <a href="#/toolbar">ToolBar</a>                    <br>
                  <a href="#">TreeView</a>                           <br>
@@ -151,7 +152,7 @@
                  INTERACTIVITY &amp; UX                             <br>
                  <a href="#">Drag &amp; Drop</a>                    <br>
                  <a href="#">Effects</a>                            <br>
-                 <img src="images/green.png">
+                 <img src="images/orange.png">
                  <a href="#/progressbar">ProgressBar</a>            <br>
                  <a href="#">Sortable</a>                           <br>
                  <a href="#">Styling</a>                            <br>
