add partial implementation of pie-chart binding to remote data
feat(sample): add partial implementation of pie-chart binding to remote
data

this sample is a good example of the need for view-model based
instantiation of KendoUI controls

--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -1,9 +1,116 @@
 <template>
-     <au-kendo-chart title.bind="title"
-                      data-source.bind="dataSource"
-                      legend.bind="legend"
-                      series-defaults.bind="seriesDefaults"
-                      series.bind="series"
-                      tooltip.bind="tooltip">
-      </au-kendo-chart>
+   <div class="row">
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+
+        <div class="col-xs-12 col-sm-2">
+            <au-kendo-chart title.bind="title"
+                          style= "height: 120px; width: 125px"
+                          data-source.bind="dataSource"
+                          legend.bind="legend"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+        </div>
+    </div>
+
 </template>
