fix(sample): fix pie chart remote data
https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/185

--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -1,9 +1,9 @@
 <template>
    <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2000"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2000)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -12,9 +12,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2001"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2001)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -23,9 +23,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2002"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2002)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -34,9 +34,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2003"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2003)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -45,9 +45,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2004"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2004)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -56,9 +56,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2005"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2005)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -69,9 +69,9 @@
 
     <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2006"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2006)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -80,9 +80,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2007"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2007)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -91,9 +91,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2008"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2008)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
@@ -102,9 +102,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="title"
+            <au-kendo-chart title="2009"
                           style= "height: 120px; width: 125px"
-                          data-source.bind="dataSource"
+                          data-source.bind="getDatasource(2009)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
