--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -1,7 +1,7 @@
 <template>
    <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2000"
+            <au-kendo-chart title.bind="{ text: '2000' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2000)"
                           legend.bind="legend"
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2001"
+            <au-kendo-chart title.bind="{ text: '2001' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2001)"
                           legend.bind="legend"
@@ -23,7 +23,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2002"
+            <au-kendo-chart title.bind="{ text: '2002' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2002)"
                           legend.bind="legend"
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2003"
+            <au-kendo-chart title.bind="{ text: '2003' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2003)"
                           legend.bind="legend"
@@ -45,7 +45,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2004"
+            <au-kendo-chart title.bind="{ text: '2004' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2004)"
                           legend.bind="legend"
@@ -56,7 +56,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2005"
+            <au-kendo-chart title.bind="{ text: '2005' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2005)"
                           legend.bind="legend"
@@ -69,7 +69,7 @@
 
     <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2006"
+            <au-kendo-chart title.bind="{ text: '2006' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2006)"
                           legend.bind="legend"
@@ -80,7 +80,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2007"
+            <au-kendo-chart title.bind="{ text: '2007' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2007)"
                           legend.bind="legend"
@@ -91,7 +91,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2008"
+            <au-kendo-chart title.bind="{ text: '2008' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2008)"
                           legend.bind="legend"
@@ -102,7 +102,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title="2009"
+            <au-kendo-chart title.bind="{ text: '2009' }"
                           style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2009)"
                           legend.bind="legend"
