--- a/sample/src/autocomplete/api.html
+++ b/sample/src/autocomplete/api.html
@@ -3,13 +3,15 @@
   <require from="./api.css"></require>
 
   <div id="example">
-    <p><strong>Pick a color:</strong></p>
-    <p>
-        <input au-kendo-autocomplete="data-source.bind: items;"
-               au-kendo-autocomplete.ref="autocomplete"
-               style="width: 100%;">
-    </p>
-    <p class="text-muted">Hint: type "red"</p>
+    <div class="demo-section k-content">
+      <p><strong>Pick a color:</strong></p>
+      <p>
+          <input au-kendo-autocomplete="data-source.bind: items;"
+                 au-kendo-autocomplete.ref="autocomplete"
+                 style="width: 100%;">
+      </p>
+      <p class="demo-hint">Hint: type "red"</p>
+    </div>
   </div>
 
   <hr>
