--- a/sample/src/autocomplete/events.html
+++ b/sample/src/autocomplete/events.html
@@ -12,7 +12,7 @@
                  kendo-filtering.trigger="logger.log('filtering')"
                  style="width: 100%;">
       </p>
-      <p class="text-muted">Hint: type "m"</p>
+      <p class="demo-hint">Hint: type "m"</p>
     </div>
 
     <div class="box">
