--- a/sample/src/autocomplete/remote-data.html
+++ b/sample/src/autocomplete/remote-data.html
@@ -8,5 +8,5 @@
               value.bind="value"
               style="width: 300px"></input>
   </p>
-  <p class="text-muted">Hint: type "che"</p>
+  <p class="demo-hint">Hint: type "che"</p>
 </template>
