--- a/sample/src/autocomplete/basic-use.html
+++ b/sample/src/autocomplete/basic-use.html
@@ -1,7 +1,11 @@
 <template>
-  <p><strong>People:</strong></p>
-  <p>
-      <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value">
-  </p>
-  <p class="text-muted">Type a name, available values in the list are: ${ items } </p>
+  <div id="example">
+    <div class="demo-section k-content">
+      <p><strong>People:</strong></p>
+      <p>
+        <input au-kendo-autocomplete="data-source.bind: items;">
+      </p>
+      <p class="demo-hint" style="word-break: break-all">Type a name, available values in the list are: ${ items } </p>
+    </div>
+  </div>
 </template>
