--- a/sample/src/autocomplete/customizing-templates.html
+++ b/sample/src/autocomplete/customizing-templates.html
@@ -1,13 +1,18 @@
 <template>
   <require from="./customizing-templates.css"></require>
-  <p><strong>Customers:</strong></p>
-  <p>
-      <input au-kendo-autocomplete="data-source.bind: datasource;
-                                    height: 400;
-                                    min-length: 1;
-                                    header-template.bind: headerTemplate;
-                                    template.bind: template;
-                                    data-text-field: ContactName" value.bind="value" style="width: 400px" id="customers">
-  </p>
-  <p class="text-muted">Start typing to find a customer. E.g. "Ann" </p>
+
+  <div id="example">
+    <div class="demo-section k-content">
+      <p><strong>Customers:</strong></p>
+      <p>
+          <input au-kendo-autocomplete="data-source.bind: datasource;
+                                        height: 400;
+                                        min-length: 1;
+                                        header-template.bind: headerTemplate;
+                                        template.bind: template;
+                                        data-text-field: ContactName" style="width: 100%" id="customers">
+      </p>
+      <p class="demo-hint">Start typing to find a customer. E.g. "Ann" </p>
+    </div>
+  </div>
 </template>
