--- a/sample/src/autocomplete/grouping.html
+++ b/sample/src/autocomplete/grouping.html
@@ -1,7 +1,13 @@
 <template>
-  <p><strong>Find a customer:</strong></p>
-  <p>
-      <input au-kendo-autocomplete="data-source.bind: datasource; height.bind: 400; data-text-field: ContactName">
-  </p>
-  <p class="text-muted"> Hint: type "an" </p>
+  <div id="example">
+    <div class="demo-section k-content">
+      <p><strong>Find a customer:</strong></p>
+      <p>
+          <input au-kendo-autocomplete="data-source.bind:
+                                        datasource; height.bind: 400;
+                                        data-text-field: ContactName" style="width: 100%">
+      </p>
+      <p class="demo-hint"> Hint: type "an" </p>
+    </div>
+  </div>
 </template>
