--- a/sample/src/autocomplete/virtualization.html
+++ b/sample/src/autocomplete/virtualization.html
@@ -1,11 +1,13 @@
 <template>
-  <p><strong>Search for shipping name:</strong></p>
-  <p>
+  <div id="example">
+    <div class="demo-section k-content">
+      <h4>Search for shipping name</h4>
       <input au-kendo-autocomplete="data-source.bind: datasource;
                                     virtual.bind: virtual;
                                     data-text-field: ShipName;
                                     height.bind: 520;
-                                    template.bind: template">
-  </p>
-  <p class="text-muted"> Hint: type "an" </p>
+                                    template.bind: template" style="width: 100%;" />
+      <div class="demo-hint">Hint: type "an"</div>
+    </div>
+  </div>
 </template>
