--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -1,8 +1,8 @@
 <template>
-   <div class="row">
+    <require from="./binding-to-remote-data.css"></require>
+    <div class="row">
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2000' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2000)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -13,7 +13,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2001' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2001)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -24,7 +23,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2002' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2002)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -35,7 +33,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2003' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2003)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -46,7 +43,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2004' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2004)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -57,7 +53,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2005' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2005)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -70,7 +65,6 @@
     <div class="row">
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2006' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2006)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -81,7 +75,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2007' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2007)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -92,7 +85,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2008' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2008)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -103,7 +95,6 @@
 
         <div class="col-xs-12 col-sm-2">
             <au-kendo-chart title.bind="{ text: '2009' }"
-                          style= "height: 120px; width: 125px"
                           data-source.bind="getDatasource(2009)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
