--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -2,7 +2,8 @@
     <require from="./binding-to-remote-data.css"></require>
     <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2000' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2000' }"
                           data-source.bind="getDatasource(2000)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -12,7 +13,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2001' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2001' }"
                           data-source.bind="getDatasource(2001)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -22,7 +24,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2002' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2002' }"
                           data-source.bind="getDatasource(2002)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -32,7 +35,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2003' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2003' }"
                           data-source.bind="getDatasource(2003)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -42,7 +46,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2004' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2004' }"
                           data-source.bind="getDatasource(2004)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -52,7 +57,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2005' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2005' }"
                           data-source.bind="getDatasource(2005)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -64,7 +70,8 @@
 
     <div class="row">
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2006' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2006' }"
                           data-source.bind="getDatasource(2006)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -74,7 +81,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2007' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2007' }"
                           data-source.bind="getDatasource(2007)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -84,7 +92,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2008' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2008' }"
                           data-source.bind="getDatasource(2008)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
@@ -94,7 +103,8 @@
         </div>
 
         <div class="col-xs-12 col-sm-2">
-            <au-kendo-chart title.bind="{ text: '2009' }"
+            <au-kendo-chart class="pie-chart"
+                          title.bind="{ text: '2009' }"
                           data-source.bind="getDatasource(2009)"
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
