--- a/sample/src/charts/sparkline/basic-use.html
+++ b/sample/src/charts/sparkline/basic-use.html
@@ -1,4 +1,7 @@
 <template>
+  <h2>Note</h2>
+  <p> This sample does not work right now. We are tracking this <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/177">here</a></p>
+
   <require from="./basic-use.css"></require>
   <div class="demo-section k-content">
        <div class="climate">
