reformat all chart view files
chore(sample): reformat all chart view files

this change addresses chart subset of item 2 in
https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/163

--- a/sample/src/charts/bullet-charts/binding-to-remote-data.html
+++ b/sample/src/charts/bullet-charts/binding-to-remote-data.html
@@ -1,12 +1,11 @@
 <template>
-    <k-chart
-                    title.bind="{text: 'April sales per day'}"
-                    height.bind='120'
-                    data-source.bind="datasource"
-                    series.bind="series"
-                    chart-area.bind="chartArea"
-                    category-axis.bind="categoryAxis"
-                    value-axis.bind="valueAxis"
-                    tooltip.bind="tooltip">
+    <k-chart    title.bind="{text: 'April sales per day'}"
+                height.bind='120'
+                data-source.bind="datasource"
+                series.bind="series"
+                chart-area.bind="chartArea"
+                category-axis.bind="categoryAxis"
+                value-axis.bind="valueAxis"
+                tooltip.bind="tooltip">
     </k-chart>
 </template>
