--- a/sample/src/charts/bubble-charts/binding-to-local-data.html
+++ b/sample/src/charts/bubble-charts/binding-to-local-data.html
@@ -1,11 +1,11 @@
 <template>
-  <k-chart data-source.bind="{data: jobGrowth}"
-                  title.bind="title"
-                  legend.bind="legend"
-                  series.bind="series"
-                  x-axis.bind="xAxis"
-                  y-axis.bind="yAxis"
-                  tooltip.bind="tooltip">
+  <k-chart  title.bind="title"
+            data-source.bind="{data: jobGrowth}"
+            legend.bind="legend"
+            series.bind="series"
+            x-axis.bind="xAxis"
+            y-axis.bind="yAxis"
+            tooltip.bind="tooltip">
   </k-chart>
 
  <div class="demo-section k-content wide">
