--- a/sample/src/charts/treemap/basic-use.html
+++ b/sample/src/charts/treemap/basic-use.html
@@ -1,9 +1,10 @@
 <template>
-  <k-treemap style="height: 600px; font-size: 12px;"
-                    data-source.bind="dataSource"
-                    value-field="value"
-                    text-field="name"
-                    view-model.ref="treemap"></k-treemap>
+  <k-treemap  style="height: 600px; font-size: 12px;"
+              data-source.bind="dataSource"
+              value-field="value"
+              text-field="name"
+              view-model.ref="treemap">
+  </k-treemap>
   <div class="box wide">
       <div class="box-col">
           <h4>TreeMap rendering types</h4>
