--- a/sample/src/charts/treemap/events.html
+++ b/sample/src/charts/treemap/events.html
@@ -1,10 +1,11 @@
 <template>
-  <k-treemap style="height: 600px; font-size: 12px;"
-                    data-source.bind="dataSource"
-                    value-field="value"
-                    text-field="name"
-                    kendo-data-bound.trigger="logger.log('Data bound')"
-                    kendo-item-created.trigger="logger.log('Item is created')"></k-treemap>
+  <k-treemap  style="height: 600px; font-size: 12px;"
+              data-source.bind="dataSource"
+              value-field="value"
+              text-field="name"
+              kendo-data-bound.trigger="logger.log('Data bound')"
+              kendo-item-created.trigger="logger.log('Item is created')">
+  </k-treemap>
 
   <div class="box">
       <h4>Console log</h4>
