--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -6,12 +6,22 @@
             <ul>
                 <li class="k-state-active">Docs</li>
                 <li>Gitter Chat</li>
+                <li>Video Chat</li>
             </ul>
-            <div>This is some content for tab 1</div>
-            <div style="height: 500px;">
+            <div style="height: 790px;">
+              <br> <br> <br> <br> <br> <br> <br> <br>
+              Aurelia-Kendoui Bridge docs - see  <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/174"> this </a>
+              for more information.
+            </div>
+            <div style="height: 790px;">
               <require from="../shared/gitter-sidecar"></require>
               <gitter-sidecar room="adriatic/Aurelia-KendoUI" view-model.ref="gitter">
               </gitter-sidecar>
+            </div>
+            <div style="height: 790px;">
+              <br> <br> <br> <br> <br> <br> <br> <br>
+              Let's put <a href="https://www.pubnub.com/blog/2015-08-25-webrtc-video-chat-app-in-20-lines-of-javascript/">Pubnub's WebRTC Video Chat </a>
+              here.
             </div>
           </div>
     </section>
