fix(funnel): fix markup
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/193

--- a/sample/src/charts/funnel-charts/binding-to-local-data.html
+++ b/sample/src/charts/funnel-charts/binding-to-local-data.html
@@ -8,7 +8,7 @@
             <div class="col-xs-12 col-sm-6">
                 <k-chart title.bind="{text: 'Before optimization'}"
                               style="height: 256px"
-                              data-source.bind="dataBefore""
+                              data-source.bind="dataBefore"
                               legend.bind="legend"
                               series.bind="seriesBefore"
                               tooltip.bind="tooltip">
