--- a/sample/src/button/api.html
+++ b/sample/src/button/api.html
@@ -1,5 +1,5 @@
 <template>
-  <button k-button="enable.bind: enabled" class="k-primary" kendo-click.trigger="test()">Click me</button>
+  <button k-button="enable.bind: enabled" class="k-primary" k-on-click.trigger="test()">Click me</button>
 
   <div class="well panel panel-default">
       <button k-button click.delegate="disable()">Disable</button>
