--- a/sample/src/charts/bar-charts/custom-pan-and-zoom.html
+++ b/sample/src/charts/bar-charts/custom-pan-and-zoom.html
@@ -5,8 +5,8 @@
               value-axis.bind="{min: 0, max: 12}"
               series.bind="[{type: 'column', field: 'val'}]"
               transitions.bind="false"
-              kendo-drag.trigger="onDrag($event)"
-              kendo-drag-end.trigger="onDragEnd($event)"
-              kendo-zoom.trigger="onZoom($event)">
+              k-on-drag.trigger="onDrag($event)"
+              k-on-drag-end.trigger="onDragEnd($event)"
+              k-on-zoom.trigger="onZoom($event)">
     </k-chart>
 </template>
