--- a/sample/src/charts/scatter-charts/custom-pan-and-zoom.html
+++ b/sample/src/charts/scatter-charts/custom-pan-and-zoom.html
@@ -4,7 +4,7 @@
             x-axis.bind="xAxis"
             series.bind="series"
             transitions.bind="false"
-            kendo-drag.trigger="setRange($event)"
-            kendo-zoom.trigger="setRange($event)">
+            k-drag.trigger="setRange($event)"
+            k-zoom.trigger="setRange($event)">
   </k-chart>
 </template>
