--- a/sample/src/charts/treemap/events.html
+++ b/sample/src/charts/treemap/events.html
@@ -3,8 +3,8 @@
               data-source.bind="dataSource"
               value-field="value"
               text-field="name"
-              kendo-data-bound.trigger="logger.log('Data bound')"
-              kendo-item-created.trigger="logger.log('Item is created')">
+              k-on-data-bound.trigger="logger.log('Data bound')"
+              k-on-item-created.trigger="logger.log('Item is created')">
   </k-treemap>
 
   <div class="box">
