--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./binding-to-remote-data.css"></require>
-    <div class="row">
+    <div class="row" id="pie-charts-remote-data">
         <div class="col-xs-12 col-sm-2" repeat.for="year of years">
             <k-chart  class="pie-chart"
                       k-title.bind="{ text: year }"
