--- a/sample/src/help/help.html
+++ b/sample/src/help/help.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="./doc"></require>
     <section>
         <h2>Aurelia-KendoUI Bridge Help</h2>
 
@@ -9,9 +10,7 @@
                 <li>Video Chat</li>
             </ul>
             <div style="height: 790px;">
-              <br> <br> <br> <br> <br> <br> <br> <br>
-              Aurelia-Kendoui Bridge docs - see  <a href="https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/174"> this </a>
-              for more information.
+              <doc></doc>
             </div>
             <div style="height: 790px;">
               <require from="../shared/gitter-sidecar"></require>
